--- a/python/requirements.in
+++ b/python/requirements.in
@@ -8,3 +8,5 @@ google-api-core>=2.11.0
 google-cloud-kms>=2.16.1
 # Hashicorp Vault KMS extension.
 hvac>=1.1.1
+# Flask, for mock HTTP servers in testing
+Flask>=2.3.3
