aead/subtle: change bazel visibility to public
On the Go level the package has a public interface and is
documented similarly to pkgs like kwp/subtle.
However, when importing aead/subtle into a project that
is built with Bazel one is stopped by the pkg's default_visibility.

--- a/go/aead/subtle/BUILD.bazel
+++ b/go/aead/subtle/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "xchacha20poly1305.go",
     ],
     importpath = "github.com/google/tink/go/aead/subtle",
+    visibility = ["//visibility:public"],
     deps = [
         "//internal/aead",
         "//subtle/random",
